[lib]
name = "randomusert_lib"


[package]
name = "randomusert-lib"
version = "0.1.1"
edition = "2021"
authors = ["randomusert"]
description = "a random library for hopefully make rust development easier"
license = "MIT"
repository = "https://github.com/randomusert/randomusert-lib"

[dependencies]
iced = "0.13.1"
fancy_sys_info = "=0.1.2"