[lib]
name = "randomusert_lib"


[package]
name = "randomusert-lib"
version = "0.1.5"
edition = "2021"
authors = ["randomusert"]
description = "a random library for hopefully make rust development easier"
license = "MIT"
repository = "https://github.com/randomusert/randomusert-lib"


# cargo crates
[dependencies]
fancy_sys_info = "=0.1.2"
tokio = { version = "1", features = ["full"] }
#hyper = "0.14"
hyper = { version = "0.14", features = ["full"] }
winapi = "0.3.9"
x11 = "2.21.0"
